--- a/packages/pyxis-elm/examples/quotation.html
+++ b/packages/pyxis-elm/examples/quotation.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Validation demo</title>
+    <title>Quotation demo</title>
     <link rel="stylesheet" href="../../pyxis-scss/dist/pyxis.css">
 </head>
 <body>
 <div id="elm-root"></div>
 </body>
 <script type="module">
-    import { Elm } from '../src/Examples/Validation/Main.elm'
+    import { Elm } from '../src/Examples/Quotation/Main.elm'
 
-    const app = Elm.Examples.Validation.Main.init({
+    const app = Elm.Examples.Quotation.Main.init({
         node: document.getElementById("elm-root")
     })
 </script>
