completed form step 1

--- a/packages/pyxis-elm/examples/validation.html
+++ b/packages/pyxis-elm/examples/validation.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Validation demo</title>
-    <link rel="stylesheet" href="../../pyxis-scss/dist/pyxis.css">
+    <link rel="stylesheet" href="../../pyxis-scss/src/scss/pyxis.scss">
 </head>
 <body>
 <div id="elm-root"></div>
